--- a/client/styles/style.css
+++ b/client/styles/style.css
@@ -1,13 +1,17 @@
 body {
   margin: 0;
-  margin-top: 10px;
+  margin: 10px 20px;
   font-family: arial, sans-serif;
 }
 
 a {
-  color: #333;
+  color: green;
   font-size: 14px;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 h1 {
@@ -148,4 +152,8 @@ input[type=url]:focus {
 
 .link-header {
   font-weight: 700;
+}
+
+.incorrect {
+  color: #ee3344;
 }
